ahora ingles nativo

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Ingles Avanzado</h5>
+                            <h5 class="font-weight-bold mb-1">Ingles Nativo</h5>
                             <p class="mb-2"><strong>Instituto Chileno Britanico de Cultura</strong> | <small>2000 - 2050</small></p>
                             <p>Estudio del idioma ingles, perfeccionado con pasantías de dos meses en Nueva Zelanda</p>
                             <a href="./files/IELTS 6.pdf"> Descarga certificado Nivel de Ingles</a>
